# mechanix-apps1

./: Cargo.toml  README.md
apps/commons/custom_utils/src/: lib.rs
apps/commons/custom_widgets/src/: icon_button.rs
apps/connect/: Cargo.toml
apps/connect/src/: main.rs
apps/connect/src/pages/: app_info_page.rs  check_internet.rs  check_internet_page.rs  configure_machine.rs  configure_machine_page.rs  device_info_page.rs  link_machine.rs  link_machine_page.rs  machine_info.rs  mod.rs  no_internet.rs  no_internet_page.rs  setup_failed.rs  setup_failed_page.rs  setup_success.rs  setup_success_page.rs  start_screen.rs  timeout_screen.rs
apps/connect/src/server/: identity_client.rs  provision_client.rs  settings_client.rs
apps/connect/src/settings/: mod.rs
apps/settings/: Cargo.toml
apps/settings/src/: main.rs
apps/settings/src/pages/: about_page.rs  add_network_page.rs  battery_page.rs  bluetooth_details_page.rs  bluetooth_pair_request_page.rs  connect_bluetooth_page.rs  connect_network_page.rs  date_time_page.rs  display_page.rs  dns_page.rs  ethernet_page.rs  home.rs  ip_settings_page.rs  lock_timeout_page.rs  manage_bluetooth_page.rs  manage_networks_page.rs  mod.rs  network_details_page.rs  networks_page.rs  performance_mode_page.rs  protocol_details_page.rs  protocol_modes_page.rs  reset_pin_page.rs  screen_timeout_page.rs  security_page.rs  set_date_page.rs  set_time_page.rs  settings_page.rs  sound_page.rs
apps/settings/src/settings/: mod.rs
apps/settings/src/widgets/: custom_bluetooth_item.rs  custom_list_item.rs  custom_list_radio_button.rs  (+3 more)
(+5 files in other folders)
