[workspace]
default-members = ["apps/connect"]
members = ["apps/connect", "apps/settings", "apps/commons/custom_widgets", "apps/commons/custom_utils"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Sweta Rohit <swetar@mechasystems.com", "Akshay Raina <akshayr@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]
documentation = "https://docs.mecha.so"
description = "Collection of UI elements for a UI Shell for Mecha devices, supports wlroots based compositors"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mechanix-apps"
homepage = "https://mecha.so"